; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_reset.c_mtk_reset_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_reset.c_mtk_reset_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@RESET_ASSERT = common dso_local global i32 0, align 4
@SYSCTL_RSTCTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @mtk_reset_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_reset_set(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp slt i32 %9, 1
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = icmp sgt i32 %12, 31
  br i1 %13, label %14, label %16

14:                                               ; preds = %11, %3
  %15 = load i32, i32* @EINVAL, align 4
  store i32 %15, i32* %4, align 4
  br label %31

16:                                               ; preds = %11
  %17 = load i32, i32* %6, align 4
  %18 = shl i32 1, %17
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* @RESET_ASSERT, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %16
  %23 = load i32, i32* @SYSCTL_RSTCTRL, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @mtk_sysctl_clr_set(i32 %23, i32 0, i32 %24)
  br label %30

26:                                               ; preds = %16
  %27 = load i32, i32* @SYSCTL_RSTCTRL, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @mtk_sysctl_clr_set(i32 %27, i32 %28, i32 0)
  br label %30

30:                                               ; preds = %26, %22
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %30, %14
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @mtk_sysctl_clr_set(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
